Update version and cleanups